Updating with reference html and styling

--- a/task-example/index.html
+++ b/task-example/index.html
@@ -9,6 +9,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <!-- This is the top blue block -->
+  <div class="header">
+    <h1 class="title">Text</h1>
+    <div class="subtitle">
+      <h1 class="subheader-1">Text</h1>
+      <h1 class="subheader-2">Text</h1>
+      <h1 class="subheader-3">Text</h1>
+    </div>
+  </div>
+  <!-- This is the lower purple block -->
+  <div class="main-body">
+    <div class="stanza-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolores distinctio illo nam ullam ab facere veritatis autem sunt. Sequi similique itaque provident dolores voluptatem ullam eligendi nisi! Deserunt, voluptate!</div>
+    <div class="stanza-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolores distinctio illo nam ullam ab facere veritatis autem sunt. Sequi similique itaque provident dolores voluptatem ullam eligendi nisi! Deserunt, voluptate!</div>
+    <div class="stanza-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolores distinctio illo nam ullam ab facere veritatis autem sunt. Sequi similique itaque provident dolores voluptatem ullam eligendi nisi! Deserunt, voluptate!</div>
+  </div>
 </body>
 </html>
